# bayesian_optimization_library

./: .gitignore  .gitmodules  README.md  bo_loop.py  data_loader.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py
bayesopt/: __init__.py  acquisition.py  bayesian_handler.py  config.py  models.py  optimizer.py
bayesopt/helpers/: logger.py  processing.py  visualization.py
bayesopt_core/: .gitmodules  __init__.py  acquisition.py  bayesian_handler.py  bo_loop.py  config.py  data_loader.py  main.py  models.py  optimizer.py
bayesopt_core/data/: data_loader.py
bayesopt_core/etl/: .gitignore  __init__.py
bayesopt_core/etl/extractors/: __init__.py  base.py  csv_extractor.py  extractor_factory.py  netcdf_extractor.py  provenance_extractor.py  zarr_extractor.py
bayesopt_core/helpers/: config.py  logger.py  plot.py  processing.py  results_to_csv.py  utils.py  visualization.py
examples/: basic_candidate_execution.ipynb  basic_candidate_generation.ipynb  basic_candidates_generation.py  basic_pipeline.py  cand_generation_with_estimation.py  candidate_exec_with_yprov4ml.py  change_config_in_execution.ipynb  detailed_cand_generation.ipynb  exec_with_yprov4ml.py  saving_candidates_to_csv.ipynb
examples/logs/: 25_1_1.5_logs.json  data_2026-01-26_16-07-38_logs.json  data_2026-01-26_16-27-52_logs.json
helpers/: config.py  logger.py  plot.py  processing.py  utils.py
